# burntoken

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  install.sh  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  vitest.config.js
.claude/skills/burn-review-tribunal/: SKILL.md
.claude/skills/burn-review-tribunal/lib/: calibration.js  cli.js  (+7 more)
.claude/workflows/: burn-review-tribunal.js
.github/: dependabot.yml
.github/workflows/: ci.yml
burntoken/: __init__.py  __main__.py  _version.py  cli.py  client.py  config.py  presets.py  reporter.py  sources.py  tasks.py  tracker.py
burntoken/agents/: __init__.py  accountant.py  dispatcher.py  reviewer.py  strategist.py  team.py
burntoken/cli/: __init__.py  banner.py  env.py  parsers.py  repl_loop.py
burntoken/cli/commands/: __init__.py  burn.py  config.py  models.py  providers.py  repl.py  review.py  run.py  team.py  use.py  work.py
burntoken/providers/: __init__.py  anthropic.py  base.py  openai.py
examples/: 00-version.sh  01-single-call.sh  02-streaming.sh  03-batch-burn.sh  04-repl-session.txt  05-work-review.sh  06-models-list.txt  README.md
scripts/: smoke-test.sh
tests/: test-calibration.js  test-cli.js  test-config.js  test-dedup.js  test-estimate.js  test-pricing.js  test-providers.js  test-report.js  test-schemas.js  test-tally.js  test-workflow-integration.js
tests_py/: conftest.py  helpers.py  test_cli_smoke.py  test_cli_surface.py  test_client.py  test_config.py  test_log_file_error_path.py  test_presets.py  test_tracker.py
(+13 files in other folders)
